BUG#31639: Wrong plan for uncorrelated subquery when loose scan            is applicable.

There were two distinct problems in this bug:
1. At execution time the subquery under an IN predicate was optimized with
   the global memeber thd->lex->current_select pointing to the outer select.
   This caused the subquery to be optimized differently when
   JOIN::optimize needed to analyze current_select.

   Fixed by setting the correct current_select for the optimization
   and execution (materialization) of the subquery.
2. When running EXPLAIN, optimization took a different path because
   - Item_exists_subselect::fix_length_and_dec sets the subquery
     LIMIT to 1, then
   - mysql_explain_union(), which is called only for EXPLAIN called
     unit->set_limit(unit->global_parameters), which resets
     join->unit->select_limit_cnt to 1, this in turn
   - affected make_join_select to call sel->test_quick_select, which
     deleted the quick_select access method.
   Fixed by setting the limit correctly when IN is executed via
   materialization.